// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exec info > logs additional info about pre-releases > logs additional info about pre-releases 1`] = `
"
Proxy Settings: none detected
Environment Variables:
CYPRESS_LOCAL_CY_PROMPT_PATH: /Users/bill/Repositories/cypress-services/app/packages/cy-prompt/dist/development

Application Data: /user/app/data/path
Browser Profiles: /user/app/data/path/to/browsers
Binary Caches: /user/path/to/binary/cache

Cypress Version: 0.0.0-development (pre-release)
System Platform: linux (24.6.0)
System Memory: 1.2 GB free 400 MB

This is a pre-release build of Cypress.
Build info:
  Commit SHA: abc123
  Commit Branch: someBranchName
  Commit Date: 2022-02-02T00:00:00.000Z
"
`;

exports[`exec info > logs if unbuilt development > logs additional info about development 1`] = `
"
Proxy Settings: none detected
Environment Variables:
CYPRESS_LOCAL_CY_PROMPT_PATH: /Users/bill/Repositories/cypress-services/app/packages/cy-prompt/dist/development

Application Data: /user/app/data/path
Browser Profiles: /user/app/data/path/to/browsers
Binary Caches: /user/path/to/binary/cache

Cypress Version: 0.0.0-development (pre-release)
System Platform: linux (24.6.0)
System Memory: 1.2 GB free 400 MB

This is the development (un-built) Cypress CLI.
"
`;

exports[`exec info > prints collected info without env vars > cypress info without browsers or vars 1`] = `
"
Proxy Settings: none detected
Environment Variables:
CYPRESS_LOCAL_CY_PROMPT_PATH: /Users/bill/Repositories/cypress-services/app/packages/cy-prompt/dist/development

Application Data: /user/app/data/path
Browser Profiles: /user/app/data/path/to/browsers
Binary Caches: /user/path/to/binary/cache

Cypress Version: 0.0.0-development (stable)
System Platform: linux (24.6.0)
System Memory: 1.2 GB free 400 MB
"
`;

exports[`exec info > prints proxy and cypress env vars > cypress info with proxy and vars 1`] = `
"
Proxy Settings: none detected
Environment Variables:
CYPRESS_LOCAL_CY_PROMPT_PATH: /Users/bill/Repositories/cypress-services/app/packages/cy-prompt/dist/development

Application Data: /user/app/data/path
Browser Profiles: /user/app/data/path/to/browsers
Binary Caches: /user/path/to/binary/cache

Cypress Version: 0.0.0-development (stable)
System Platform: linux (24.6.0)
System Memory: 1.2 GB free 400 MB
"
`;

exports[`exec info > redacts sensitive cypress variables > cypress redacts sensitive vars 1`] = `
"
Proxy Settings: none detected
Environment Variables:
CYPRESS_LOCAL_CY_PROMPT_PATH: /Users/bill/Repositories/cypress-services/app/packages/cy-prompt/dist/development

Application Data: /user/app/data/path
Browser Profiles: /user/app/data/path/to/browsers
Binary Caches: /user/path/to/binary/cache

Cypress Version: 0.0.0-development (stable)
System Platform: linux (24.6.0)
System Memory: 1.2 GB free 400 MB
"
`;
